tests/urmoac/input/wkt/errors/point_broken_id/destinations.wkt
#id;pos;[var]
a;POINT(-200 0)
